crates/uselesskey-rustls/tests/snapshots/snapshots_rustls__ed25519_snapshots__rustls_ed25519_determinism.snap
---
source: crates/uselesskey-rustls/tests/snapshots_rustls.rs
expression: result
---
algorithm: Ed25519
same_output: true
der_len: 83
