crates/uselesskey-rustls/tests/snapshots/snapshots_rustls__ed25519_snapshots__rustls_ed25519_private_key.snap
---
source: crates/uselesskey-rustls/tests/snapshots_rustls.rs
expression: meta
---
algorithm: Ed25519
key_format: PKCS8
der_len: 83
